Cors liberado, security + token implementados

--- a/src/main/resources/application-teste.properties
+++ b/src/main/resources/application-teste.properties
@@ -24,6 +24,9 @@ spring.jpa.hibernate.ddl-auto=create-drop
 #le o data.sql e inicializa as tabelas
 spring.jpa.defer-datasource-initialization=true
 
+#token pegando de variavel de ambiente
+api.security.token.secret=${JWT_SECRET:12345678}
+
 
 #configurando data-hora
 spring.mvc.format.date=yyyy-MM-dd
