--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 spring.profiles.active=teste
 
 spring.application.name=Sprint Quiz 
-server.servlet.context-path=/api/v1
+#server.servlet.context-path=/api/v1
 # server.port=8080
 
 # desabilita nome aleatorio para banco h2
