--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <name>cuidarApp</name>
     <description>Projeto para a ONG Instituto Cuidar</description>
     <properties>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -85,6 +85,24 @@
 <!--            <artifactId>springfox-swagger2</artifactId>-->
 <!--            <version>2.9.2</version>-->
 <!--        </dependency>-->
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.2.1</version>
+        </dependency>
+
 
 
         <!-- ModelMapper-->
