Personalizando serializacao do json das entidades

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
 # suppress inspection "SpellCheckingInspection" for whole file
 
-spring.profiles.active=teste
+########## CONFIGURACOES GERAIS ###########################
 
-spring.application.name=Sprint Quiz 
+spring.profiles.active=teste
+spring.application.name=CuidarApp
 #server.servlet.context-path=/api/v1
 # server.port=8080
 
 # desabilita nome aleatorio para banco h2
 spring.datasource.generate-unique-name=false
 
-# desabilita reinicio automatico
+# desabilita reload automatico devtools
 spring.devtools.restart.enabled=true
 
 # habilita leitura de arquivos .data.sql
@@ -20,3 +21,77 @@ spring.jpa.defer-datasource-initialization=true
 spring.mvc.format.date=yyyy-MM-dd
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 spring.mvc.format.time=HH:mm:ss
+
+
+################################################################
+
+########## CONFIGURACOES DO BD ###########################
+# parametro de conexao com o banco mysql
+# createDataBase cria o BD caso não exista
+# ServerTime define a localizacao do BD e evita erros
+# &useUnicode=yes&characterEncoding=UTF-8 para corrigir problemas de acentuacao no BD
+spring.datasource.url=jdbc:mysql://localhost:3306/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
+
+# login e senha
+spring.datasource.username=root
+spring.datasource.password=159951
+
+
+
+################################################################################################
+
+########## CONFIGURACOES DA JPA ###########################
+# indica o dialeto para o Hibernate gerar a sintaxe SQL correta suportada pelo MySQL 8.
+# influencia nas configuracoes das tabelas criadas, como tipo de engine.
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+###################DESABILITAR AO SE UTILIZAR FLYWAY#########################
+# gera sql e cria tabelas automaticamente *USAR SOMENTE EM TESTES*
+spring.jpa.generate-ddl=true
+# cria e dropa as tabelas no reinicio da aplicacao *USAR SOMENTE EM TESTES*
+spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=update
+###################DESABILITAR AO SE UTILIZAR FLYWAY#########################
+
+
+# exibi no console o sql gerado pelo hibernate e formata ou nao
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=false
+
+# Informando nome dos scripts de massa a serem lidos
+#spring.datasource.data=import_1.sql,import_2.sql
+# ou
+#spring.jpa.properties.hibernate.hbm2ddl.import_files=arquivo1.sql,arquivo2.sql
+
+# Muda o caminho de leitura dos scripts
+#spring.datasource.data=classpath:data/import.sql
+
+#permitir a quebra de linhas no import.sql.
+spring.jpa.properties.hibernate.hbm2ddl.import_files_sql_extractor=org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
+
+#se os scripts causarem excecoes, o aplicativo nao falhara ao iniciar
+#spring.datasource.continue-on-error
+
+#exibição no console dos parâmetros recebidos
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#ver tempo e performace das querys
+#hibernate.generate_statistics
+spring.jpa.hibernate.generate_statistics=true
+#org.hibernate.stat=DEBUG
+logging.level.org.hibernate.stat=DEBUG
+
+
+################################################################
+
+########## CONFIGURACOES HIKARI POOL DE CONEXOES ###########################
+
+#valor maximo de conexoes
+spring.datasource.hikari.maximum-pool-size: 10
+#minimo de conexoes
+spring.datasource.hikari.minimum-idle: 10
+#tempo em millis para encerrar conexoes ociosas
+spring.datasource.hikari.idle-timeout: 30000 
+
+################################################################
