--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,14 @@
             <version>4.2.1</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.flywaydb</groupId>-->
+<!--            <artifactId>flyway-mysql</artifactId>-->
+<!--        </dependency>-->
 
         <!-- ModelMapper-->
         <dependency>
