Criadas: Classes de Erro de negocio, Classes de Granularidade de erros, Classe de Modelo Padrão de json para exibição de erro, Classe de Controlle que centraliza Erros da Aplicação. Mapeamento entre PacienteED e ExameED refeito, agora podes criar um exame separado e estará na lista de exames de paciente.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -93,28 +93,20 @@ api.security.token.secret=${JWT_SECRET:12345678}
 ##gerar o sql  já formatado.
 #spring.jpa.properties.hibernate.format_sql=true
 #
-#desabilita o flyway na inicializacao
+
+
+
+####################DESCOMENTAR AO NAO SE UTILIZAR DO FLYWAY#########################
+## gera sql e cria tabelas automaticamente *USAR SOMENTE EM TESTES*
+#spring.jpa.generate-ddl=true
+#
+## cria e dropa as tabelas no reinicio da aplicacao *USAR SOMENTE EM TESTES*
+#spring.jpa.hibernate.ddl-auto=create
+##spring.jpa.hibernate.ddl-auto=update
+#
+##desabilita o flyway na inicializacao
 #spring.flyway.enabled=false
 
-####################DESABILITAR AO SE UTILIZAR FLYWAY#########################
-# gera sql e cria tabelas automaticamente *USAR SOMENTE EM TESTES*
-#spring.jpa.generate-ddl=true
-# nao criar tabelas automaticamente
-spring.jpa.hibernate.ddl-auto=none
-# cria e dropa as tabelas no reinicio da aplicacao *USAR SOMENTE EM TESTES*
-#spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.hibernate.ddl-auto=update
-
-####################DESABILITAR AO SE UTILIZAR FLYWAY#########################
-
-#indicando local das migrations baseado no profile ativo
-#teste
-spring.flyway.locations=classpath:db/migration
-#prod application-prod.properties
-#spring.flyway.locations=classpath:db/migration/prod
-#spring.flyway.locations=classpath:db/migration,classpath:db/migration/testedata
-#
-#
 ## exibi no console o sql gerado pelo hibernate e formata ou nao
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=false
@@ -130,6 +122,26 @@ spring.flyway.locations=classpath:db/migration
 ##permitir a quebra de linhas no import.sql.
 #spring.jpa.properties.hibernate.hbm2ddl.import_files_sql_extractor=org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
 #
+
+
+####################DESCOMENTAR AO NAO SE UTILIZAR DO FLYWAY#########################
+
+####################DESCOMENTAR AO SE UTILIZAR FLYWAY#########################
+
+# nao criar tabelas automaticamente
+spring.jpa.hibernate.ddl-auto=none
+
+
+####################DESCOMENTAR AO SE UTILIZAR FLYWAY#########################
+
+#indicando local das migrations baseado no profile ativo
+#teste
+spring.flyway.locations=classpath:db/migration
+#prod application-prod.properties
+#spring.flyway.locations=classpath:db/migration/prod
+#spring.flyway.locations=classpath:db/migration,classpath:db/migration/testedata
+#
+#
 ##se os scripts causarem excecoes, o aplicativo nao falhara ao iniciar
 ##spring.datasource.continue-on-error
 #
@@ -144,7 +156,6 @@ spring.flyway.locations=classpath:db/migration
 #logging.level.org.hibernate.stat=DEBUG
 #
 #
-#################################################################
 #
 ########### CONFIGURACOES HIKARI POOL DE CONEXOES ###########################
 #
@@ -155,4 +166,4 @@ spring.flyway.locations=classpath:db/migration
 ##tempo em millis para encerrar conexoes ociosas
 #spring.datasource.hikari.idle-timeout: 30000
 #
-#################################################################
+########### CONFIGURACOES HIKARI POOL DE CONEXOES ###########################
