--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>Projeto para a ONG Instituto Cuidar</description>
     <properties>
         <java.version>17</java.version>
+        <modelmapper.version>3.0.0</modelmapper.version>
     </properties>
     <dependencies>
         <dependency>
@@ -116,7 +117,7 @@
         <dependency>
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
-            <version>3.0.0</version>
+            <version>${modelmapper.version}</version>
         </dependency>
     </dependencies>
 
