--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -64,9 +64,9 @@ api.security.token.secret=${JWT_SECRET:12345678}
 ############CONFIGURACOES BD H2#################################
 
 #
-########### CONFIGURACOES DO BD ###########################
+########### CONFIGURACOES DO BD MYSQL ###########################
 ## parametro de conexao com o banco mysql
-## createDataBase cria o BD caso não exista
+## createDataBase cria o BD caso nao exista
 ## ServerTime define a localizacao do BD e evita erros
 ## &useUnicode=yes&characterEncoding=UTF-8 para corrigir problemas de acentuacao no BD
 #spring.datasource.url=jdbc:mysql://localhost:3306/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
@@ -75,7 +75,7 @@ api.security.token.secret=${JWT_SECRET:12345678}
 #spring.datasource.username=root
 #spring.datasource.password=159951
 #
-########### CONFIGURACOES DO BD ###########################
+########### CONFIGURACOES DO BD MYSQL ###########################
 #
 #################################################################################################
 #
@@ -90,7 +90,7 @@ api.security.token.secret=${JWT_SECRET:12345678}
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=update
 ## indica o local para salvar desse arquivo
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/1_ddl.sql
-##gerar o sql  já formatado.
+##gerar o sql  ja formatado.
 #spring.jpa.properties.hibernate.format_sql=true
 #
 
@@ -145,7 +145,7 @@ spring.flyway.locations=classpath:db/migration
 ##se os scripts causarem excecoes, o aplicativo nao falhara ao iniciar
 ##spring.datasource.continue-on-error
 #
-##exibição no console dos parâmetros recebidos
+##exibicao no console dos parametros recebidos
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #
@@ -156,6 +156,17 @@ spring.flyway.locations=classpath:db/migration
 #logging.level.org.hibernate.stat=DEBUG
 #
 #
+#ignora a pasta static do projeto
+spring.resources.add-mappings=false
+
+#falha quando passada uma propriedade anotada com @jsonIgnore
+spring.jackson.deserialization.fail-on-ignored-properties=true
+
+#se nao existir um handleException para a url citada informe NoHandlerFoundException
+spring.mvc.throw-exception-if-no-handler-found=true
+
+#falha quando passado um parametro desconhecido no json
+spring.jackson.deserialization.fail-on-unknown-properties=true
 #
 ########### CONFIGURACOES HIKARI POOL DE CONEXOES ###########################
 #
@@ -167,3 +178,7 @@ spring.flyway.locations=classpath:db/migration
 #spring.datasource.hikari.idle-timeout: 30000
 #
 ########### CONFIGURACOES HIKARI POOL DE CONEXOES ###########################
+
+#
+#Passa o nome dos atributos no json automaticamente para snake case
+#spring.jackson.property-naming-strategy=SNAKE_CASE
