--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,9 @@
 #spring.profiles.active=teste
 spring.application.name=CuidarApp
 #server.servlet.context-path=/api/v1
-# server.port=8080
+ server.port=8082
 
-# desabilita nome aleatorio para banco h2
-spring.datasource.generate-unique-name=false
+
 
 # desabilita reload automatico devtools
 spring.devtools.restart.enabled=true
@@ -26,56 +25,55 @@ spring.mvc.format.time=HH:mm:ss
 #################################################################
 
 
-############CONFIGURACOES BD H2#################################
-server.port=8081
-
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-
-#habilitando console visual e endereco de acesso
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-#Habilitando visualizacao do codigo sql criado
-spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=false
-
-
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.hibernate.ddl-auto=create-drop
-
-#le o _data.sql e inicializa as tabelas
-#spring.jpa.defer-datasource-initialization=true
-
-#token pegando de variavel de ambiente
-api.security.token.secret=${JWT_SECRET:12345678}
+#############CONFIGURACOES BD H2#################################
+#server.port=8081
+#
+# desabilita nome aleatorio para banco h2
+spring.datasource.generate-unique-name=false
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#
+#
+##habilitando console visual e endereco de acesso
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#
+##Habilitando visualizacao do codigo sql criado
+#spring.jpa.show-sql=true
+##spring.jpa.properties.hibernate.format_sql=false
+#
+#
+##spring.jpa.hibernate.ddl-auto=update
+##spring.jpa.hibernate.ddl-auto=create
+##spring.jpa.hibernate.ddl-auto=create-drop
+#
+##le o _data.sql e inicializa as tabelas
+##spring.jpa.defer-datasource-initialization=true
+#
+##
+###configurando data-hora
+##spring.mvc.format.date=yyyy-MM-dd
+##spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+##spring.mvc.format.time=HH:mm:ss
+#
+#############CONFIGURACOES BD H2#################################
 
 #
-##configurando data-hora
-#spring.mvc.format.date=yyyy-MM-dd
-#spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
-#spring.mvc.format.time=HH:mm:ss
+########## CONFIGURACOES DO BD MYSQL ###########################
+# parametro de conexao com o banco mysql
+# createDataBase cria o BD caso nao exista
+# ServerTime define a localizacao do BD e evita erros
+# &useUnicode=yes&characterEncoding=UTF-8 para corrigir problemas de acentuacao no BD
+spring.datasource.url=jdbc:mysql://localhost:3306/cuidarapp?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 
-############CONFIGURACOES BD H2#################################
+# login e senha
+spring.datasource.username=root
+spring.datasource.password=159951
 
-#
-########### CONFIGURACOES DO BD MYSQL ###########################
-## parametro de conexao com o banco mysql
-## createDataBase cria o BD caso nao exista
-## ServerTime define a localizacao do BD e evita erros
-## &useUnicode=yes&characterEncoding=UTF-8 para corrigir problemas de acentuacao no BD
-#spring.datasource.url=jdbc:mysql://localhost:3306/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
-#
-## login e senha
-#spring.datasource.username=root
-#spring.datasource.password=159951
-#
-########### CONFIGURACOES DO BD MYSQL ###########################
+########## CONFIGURACOES DO BD MYSQL ###########################
 #
 #################################################################################################
 #
@@ -96,7 +94,7 @@ api.security.token.secret=${JWT_SECRET:12345678}
 
 
 
-####################DESCOMENTAR AO NAO SE UTILIZAR DO FLYWAY#########################
+####################DESCOMENTAR AO SE UTILIZAR DO FLYWAY EM TESTE#########################
 ## gera sql e cria tabelas automaticamente *USAR SOMENTE EM TESTES*
 #spring.jpa.generate-ddl=true
 #
@@ -123,22 +121,29 @@ api.security.token.secret=${JWT_SECRET:12345678}
 #spring.jpa.properties.hibernate.hbm2ddl.import_files_sql_extractor=org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
 #
 
+#indicando local das migrations baseado no profile ativo
+#teste
+#spring.flyway.locations=classpath:db/migration
 
-####################DESCOMENTAR AO NAO SE UTILIZAR DO FLYWAY#########################
+
+####################DESCOMENTAR AO SE UTILIZAR DO FLYWAY EM TESTE#########################
 
 ####################DESCOMENTAR AO SE UTILIZAR FLYWAY#########################
 
-# nao criar tabelas automaticamente
-spring.jpa.hibernate.ddl-auto=none
+## nao criar tabelas automaticamente
+#spring.jpa.hibernate.ddl-auto=none
+
+#prod application-prod.properties
+spring.flyway.locations=classpath:db/migration/prod
 
 
 ####################DESCOMENTAR AO SE UTILIZAR FLYWAY#########################
 
 #indicando local das migrations baseado no profile ativo
-#teste
-spring.flyway.locations=classpath:db/migration
-#prod application-prod.properties
-#spring.flyway.locations=classpath:db/migration/prod
+##teste
+##spring.flyway.locations=classpath:db/migration
+##prod application-prod.properties
+##spring.flyway.locations=classpath:db/migration/prod
 #spring.flyway.locations=classpath:db/migration,classpath:db/migration/testedata
 #
 #
@@ -182,3 +187,10 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 #
 #Passa o nome dos atributos no json automaticamente para snake case
 #spring.jackson.property-naming-strategy=SNAKE_CASE
+
+# Logging sl4j
+# token do solarwinds - https://adajow.loggly.com/tokens
+# valor pode ser substituito por variavel de ambiente do pc ou servidor
+#logging.loggly.token=ca3adb63-90ce-4597-be15-ecae7ff8ace0
+#substituida por variavel de ambiente na configuracao do projeto chamada:
+#logging.loggly.token=TOKEN_LOGGLY
