--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,15 @@
     <name>cuidarApp</name>
     <description>Projeto para a ONG Instituto Cuidar</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>11</java.version>
         <modelmapper.version>3.0.0</modelmapper.version>
         <squiggly.version>1.3.18</squiggly.version>
         <jasperreports.version>6.19.1</jasperreports.version>
         <logback-ext-loggly.version>0.1.5</logback-ext-loggly.version>
+        <aws-java-sdk-s3.version>1.12.204</aws-java-sdk-s3.version>
+        <dockerfile-maven-version>1.4.13</dockerfile-maven-version>
+        <springdoc.version>1.6.9</springdoc.version>
+        <springauthserver.version>0.3.1</springauthserver.version>
     </properties>
     <dependencies>
         <dependency>
@@ -184,5 +188,36 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>docker</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.spotify</groupId>
+                        <artifactId>dockerfile-maven-plugin</artifactId>
+                        <version>${dockerfile-maven-version}</version>
+                        <executions>
+                            <execution>
+                                <id>default</id>
+                                <goals>
+                                    <goal>build</goal>
+                                    <goal>push</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <repository>cuidarapp-api</repository>
+                            <buildArgs>
+                                <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
+                            </buildArgs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
 
 </project>
