--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -67,7 +67,7 @@ spring.datasource.generate-unique-name=false
 # createDataBase cria o BD caso nao exista
 # ServerTime define a localizacao do BD e evita erros
 # &useUnicode=yes&characterEncoding=UTF-8 para corrigir problemas de acentuacao no BD
-spring.datasource.url=jdbc:mysql://localhost:3306/cuidarapp?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/cuidarapp?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 
 # login e senha
 spring.datasource.username=root
