Gerando imagem e container docker da api e do BD (pendente geração de  2 containeres e proxy com nginx)

--- a/pom.xml
+++ b/pom.xml
@@ -208,7 +208,8 @@
                             </execution>
                         </executions>
                         <configuration>
-                            <repository>cuidarapp-api</repository>
+                            <repository>jonathanhenriques/cuidarapp-api</repository>
+<!--                            <repository>cuidarapp-api</repository>-->
                             <buildArgs>
                                 <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
                             </buildArgs>
