--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 #spring.profiles.active=teste
 spring.application.name=CuidarApp
 #server.servlet.context-path=/api/v1
- server.port=8082
+# server.port=8082
 
 
 
@@ -30,11 +30,11 @@ spring.mvc.format.time=HH:mm:ss
 #
 # desabilita nome aleatorio para banco h2
 spring.datasource.generate-unique-name=false
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #
 #
 ##habilitando console visual e endereco de acesso
@@ -67,11 +67,11 @@ spring.datasource.generate-unique-name=false
 # createDataBase cria o BD caso nao exista
 # ServerTime define a localizacao do BD e evita erros
 # &useUnicode=yes&characterEncoding=UTF-8 para corrigir problemas de acentuacao no BD
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/cuidarapp?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
-
-# login e senha
-spring.datasource.username=root
-spring.datasource.password=159951
+#spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/cuidarapp?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+#
+## login e senha
+#spring.datasource.username=root
+#spring.datasource.password=159951
 
 ########## CONFIGURACOES DO BD MYSQL ###########################
 #
@@ -134,7 +134,7 @@ spring.datasource.password=159951
 #spring.jpa.hibernate.ddl-auto=none
 
 #prod application-prod.properties
-spring.flyway.locations=classpath:db/migration/prod
+#spring.flyway.locations=classpath:db/migration/prod
 
 
 ####################DESCOMENTAR AO SE UTILIZAR FLYWAY#########################
