--- a/src/main/resources/application-desenvolvimento.properties
+++ b/src/main/resources/application-desenvolvimento.properties
@@ -17,11 +17,14 @@ spring.devtools.restart.enabled=true
 # createDataBase = cria o BD caso nao exista
 # ServerTime = define a localizacao do BD e evita erros
 # &useUnicode=yes&characterEncoding=UTF-8 = para corrigir problemas de acentuacao no BD
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/cuidarapp?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/cuidarapp?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://containers-us-west-195.railway.app:6576/railway?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 # login e senha
 # trocar para variaveis de ambiente ou linha de comando
+#spring.datasource.username=root
+#spring.datasource.password=159951
 spring.datasource.username=root
-spring.datasource.password=159951
+spring.datasource.password=Gml3tWvht3lhw164L42n
 ########## CONFIGURACOES DO BD MYSQL ###########################
 
 #
