--- a/src/main/resources/application-desenvolvimento.properties
+++ b/src/main/resources/application-desenvolvimento.properties
@@ -18,13 +18,14 @@ spring.devtools.restart.enabled=true
 # ServerTime = define a localizacao do BD e evita erros
 # &useUnicode=yes&characterEncoding=UTF-8 = para corrigir problemas de acentuacao no BD
 #spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/cuidarapp?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.url=jdbc:mysql://containers-us-west-195.railway.app:6576/railway?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.url=jdbc:mysql://containers-us-west-195.railway.app:6576/railway?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 # login e senha
 # trocar para variaveis de ambiente ou linha de comando
 #spring.datasource.username=root
 #spring.datasource.password=159951
-spring.datasource.username=root
-spring.datasource.password=Gml3tWvht3lhw164L42n
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
 ########## CONFIGURACOES DO BD MYSQL ###########################
 
 #
