--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
             <type>pom</type>
         </dependency>
         <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+<!--            <version>42.3.1</version>-->
+        </dependency>
+
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
