--- a/src/main/resources/application-producao.properties
+++ b/src/main/resources/application-producao.properties
@@ -15,15 +15,23 @@ spring.devtools.restart.enabled=false
 # createDataBase = cria o BD caso nao exista
 # ServerTime = define a localizacao do BD e evita erros
 # &useUnicode=yes&characterEncoding=UTF-8 = para corrigir problemas de acentuacao no BD
+## mysql local / docker
 #spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/cuidarapp?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
-#spring.datasource.url=jdbc:mysql://containers-us-west-195.railway.app:6576/railway?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
-# login e senha
-# trocar para variaveis de ambiente ou linha de comando
 #spring.datasource.username=root
 #spring.datasource.password=159951
-spring.datasource.username=${MYSQLUSER}
-spring.datasource.password=${MYSQLPASSWORD}
+## mysql deploy railway
+#spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.username=${MYSQLUSER}
+#spring.datasource.password=${MYSQLPASSWORD}
+## postgres
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:PGPORT/PGHOST
+spring.datasource.username=PGUSER
+spring.datasource.password=PGPASSWORD
+
+# login e senha
+# trocar para variaveis de ambiente ou linha de comando
+
+
 ########## CONFIGURACOES DO BD MYSQL ###########################
 
 #
