--- a/src/main/resources/application-producao.properties
+++ b/src/main/resources/application-producao.properties
@@ -24,9 +24,9 @@ spring.devtools.restart.enabled=false
 #spring.datasource.username=${MYSQLUSER}
 #spring.datasource.password=${MYSQLPASSWORD}
 ## postgres
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:PGPORT/PGHOST
-spring.datasource.username=PGUSER
-spring.datasource.password=PGPASSWORD
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${PGPORT}/${PGHOST}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
 
 # login e senha
 # trocar para variaveis de ambiente ou linha de comando
