--- a/src/main/resources/application-producao.properties
+++ b/src/main/resources/application-producao.properties
@@ -24,7 +24,7 @@ spring.devtools.restart.enabled=false
 #spring.datasource.username=${MYSQLUSER}
 #spring.datasource.password=${MYSQLPASSWORD}
 ## postgres
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${PGPORT}/${PGHOST}
+spring.datasource.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT}/${PGDATABASE}
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
 
