--- a/src/main/resources/application-teste.properties
+++ b/src/main/resources/application-teste.properties
@@ -48,6 +48,9 @@ spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
 #gerar o sql  ja formatado.
 spring.jpa.properties.hibernate.format_sql=true
+#testar a conexao de tempos em tempos para mante-la ativa
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
 ########### CONFIGURACOES DA JPA ###########################
 
 #
