--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 
 ########## CONFIGURACOES GERAIS ###########################
 nome.perfil=padrao
-spring.profiles.active=teste
+#spring.profiles.active=desenvolvimento
 spring.application.name=CuidarApp
 #server.servlet.context-path=/api/v1
 #server.port=8085
