--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,9 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-<!--            <version>42.3.1</version>-->
+            <version>42.2.27</version>
         </dependency>
+
 
         <dependency>
             <groupId>mysql</groupId>
