criada classe para verificar e criar BD antes da inicialização, se necessário. schema padrão definido no properties, alteração do schema padrão usado pelo flyway. Alteração para BD postgres completa em des e prod

--- a/src/main/resources/application-desenvolvimento.properties
+++ b/src/main/resources/application-desenvolvimento.properties
@@ -28,7 +28,7 @@ spring.devtools.add-properties=false
 #spring.datasource.username=${MYSQLUSER}
 #spring.datasource.password=${MYSQLPASSWORD}
 ## postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/cuidarapp
+spring.datasource.url=jdbc:postgresql://localhost:5432/cuidarapp89
 spring.datasource.username=postgres
 spring.datasource.password=159951
 
@@ -68,7 +68,10 @@ spring.jpa.properties.hibernate.format_sql=true
 #indica diretorio do flyway
 spring.flyway.locations=classpath:db/des
 ##se os scripts causarem excecoes, o aplicativo nao falhara ao iniciar
-##spring.datasource.continue-on-error
+#spring.datasource.continue-on-error
+##define schema para criar flyway_schema_history
+spring.flyway.schemas=cuidarapp_schema
+spring.flyway.default-schema=cuidarapp_schema
 #################### FLYWAY #########################
 
 #
@@ -82,4 +85,17 @@ spring.flyway.locations=classpath:db/des
 #spring.datasource.hikari.idle-timeout: 30000
 #
 ########### CONFIGURACOES HIKARI POOL DE CONEXOES ###########################
+
+#
+
+########### CONFIGURACOES POOL DE CONEXOES COM BD ###########################
+##número inicial de conexões
+#spring.datasource.initialSize=50
+##número máximo de conexões
+#spring.datasource.maxActive=200
+##número máximo de conexões inativas
+#spring.datasource.maxIdle=200
+##número mínimo de conexões inativas
+#spring.datasource.minIdle=50
+########### CONFIGURACOES POOL DE CONEXOES COM BD ###########################
 
