--- a/src/main/resources/db/prod/flyway.properties
+++ b/src/main/resources/db/prod/flyway.properties
@@ -1,5 +1,8 @@
+##indica schema para criacao da tabela do flyway
+flyway.table=cuidarapp_schema.flyway_schema_history
 
 ##banco mysql
 flyway.url=jdbc:mysql://localhost:3306/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
 flyway.user=root
 flyway.password=159951
+
