profile alterado para producao.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 
 ########## CONFIGURACOES GERAIS ###########################
 nome.perfil=padrao
-#spring.profiles.active=desenvolvimento
+spring.profiles.active=producao
 spring.application.name=CuidarApp
 #server.servlet.context-path=/api/v1
 #server.port=8085
