--- a/src/main/resources/application-producao.properties
+++ b/src/main/resources/application-producao.properties
@@ -27,12 +27,15 @@ spring.devtools.restart.enabled=false
 #spring.datasource.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT}/${PGDATABASE}
 #spring.datasource.username=${PGUSER}
 #spring.datasource.password=${PGPASSWORD}
-spring.datasource.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:cuidarapp}
-spring.datasource.username=${PGUSER:postgres}
-spring.datasource.password=${PGPASSWORD:159951}
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${PGPORT:5432}/${POSTGRES_DB:cuidarapp}
+spring.datasource.username=${POSTGRES_USER:postgres}
+spring.datasource.password=${POSTGRES_PASSWORD:159951}
 
 # login e senha
 # trocar para variaveis de ambiente ou linha de comando
+DB_URL=jdbc:postgresql://localhost:5432/
+DB_USERNAME=postgres
+DB_PASSWORD=159951
 
 
 ########## CONFIGURACOES DO BD MYSQL ###########################
