adicionando mais inserts em pacientes e identando migrations de teste/dev e prod. Correção na classe DatabaseInitializer agora criando o banco caso não existe.

--- a/src/main/resources/application-teste.properties
+++ b/src/main/resources/application-teste.properties
@@ -4,7 +4,7 @@
 nome.perfil=teste
 spring.application.name=CuidarAppTeste
 #server.servlet.context-path=/api/v1
-server.port=8081
+server.port=8080
 # desabilita reload automatico devtools
 spring.devtools.restart.enabled=true
 # habilita leitura de arquivos ._data.sql
@@ -16,6 +16,8 @@ spring.devtools.restart.enabled=true
 #############CONFIGURACOES BD H2#################################
 # desabilita nome aleatorio para banco h2
 spring.datasource.generate-unique-name=false
+# define nome do schema do h2
+#spring.jpa.properties.hibernate.default_schema=cuidarapp
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
