--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,10 @@
-; comentado ate que volte a funcionar
-; configuracoes para o servidor nginx
+# comentado ate que volte a funcionar
+# configuracoes para o servidor nginx
 server {
 
-; location / vai lidar com todas as requisicoes, independente do endpoint
-	location / {
-; 	caminho do host padrao, nome do container api usado no docker-compose e porta
-		proxy_pass http://cuidarapp-api:8080;
-	}
+  # location / vai lidar com todas as requisicoes, independente do endpoint
+  location / {
+    # caminho do host padrao, nome do container api usado no docker-compose e porta
+    proxy_pass http://cuidarapp-api:8080;
+  }
 }
